--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "itv APIs Technical Test",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot",
+    "dev": "webpack-dev-server --hot --inline --content-base ./",
+    "watch": "webpack --watch --progress"
   },
   "repository": {
     "type": "git",
