--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "itv-apis",
   "version": "1.0.0",
   "description": "itv APIs Technical Test",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "webpack-dev-server --hot",
-    "dev": "webpack-dev-server --hot --inline --content-base ./",
-    "watch": "webpack --watch --progress"
+    "start": "webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
@@ -18,28 +16,10 @@
     "url": "https://github.com/MyPitit/itv-apis/issues"
   },
   "homepage": "https://github.com/MyPitit/itv-apis#readme",
-  "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "nodemon": "^1.9.2",
-    "react-hot-loader": "^1.3.0",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "wrapping-tape": "0.0.3"
-  },
   "dependencies": {
-    "inert": "^4.0.0",
-    "node-sass": "^3.7.0",
     "react": "^15.0.2",
-    "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.0"
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
