--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "itv APIs Technical Test",
   "main": "main.js",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "dev": "webpack-dev-server --hot",
+    "build": "webpack --progress",
+    "watch": "webpack --progress --watch",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +20,26 @@
   },
   "homepage": "https://github.com/MyPitit/itv-apis#readme",
   "dependencies": {
+    "hapi": "^13.4.1",
+    "inert": "^4.0.0",
     "react": "^15.0.2",
+    "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
+    "react-router": "^2.4.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "jasmine-ajax": "^3.2.0",
+    "nodemon": "^1.9.2",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.1"
   }
 }
